--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
             <!--Cloudstack Links-->
             <section>
                 <h2>Cloudstack Links</h2>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudtackblogs.github.io/A-Closer-Look-at-the-Best-Vibrating-Butt-Plug-Selections/">https://cloudtackblogs.github.io/A-Closer-Look-at-the-Best-Vibrating-Butt-Plug-Selections/</a><br>
+                <a target="_bLank" href="https://buttplugtv.s3.us-east-005.backblazeb2.com/A+Closer+Look+at+the+Best+Vibrating+Butt+Plug+Selections/index.html">https://buttplugtv.s3.us-east-005.backblazeb2.com/A+Closer+Look+at+the+Best+Vibrating+Butt+Plug+Selections/index.html</a><br>
+                <a target="_bLank" href="https://a-closer-look-at-the-best-vi-git-7d0261-cloudtackblogs-projects.vercel.app/">https://a-closer-look-at-the-best-vi-git-7d0261-cloudtackblogs-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://guileless-griffin-923268.netlify.app/">https://guileless-griffin-923268.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
